triangle div test

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     </head>
     <body>
         Hey, we're the Shapeless Developers!
+
+
+        <div class="triangle"></div>
     </body>
 </html>
